adding functionality for promo codes