@@ -13,6 +13,7 @@ import com.evently.booking.order.model.Order;
 import com.evently.booking.order.model.OrderStatus;
 import com.evently.booking.order.repository.OrderRepository;
 import com.evently.booking.order.service.orderUpdate.OrderUpdateManager;
+import com.evently.booking.promoCode.service.PromoCodeService;
 import com.evently.booking.ticket.dto.TicketListItem;
 import com.evently.booking.ticket.model.Ticket;
 import com.evently.booking.ticket.model.TicketStatus;
@@ -50,12 +51,14 @@ public class OrderService {
     private final EventServiceClient eventServiceClient;
     private final ApplicationEventPublisher eventPublisher;
     private final OrderUpdateManager orderUpdateManager;
+    private final PromoCodeService promoCodeService;
 
     @Transactional
     public void addTicketsToOrder(long userId, OrderRequest orderRequest) {
         orderRepository.findPendingOrderByIdAndUserId(userId).map(order -> updateExistingOrder(order, orderRequest, userId)).orElseGet(() -> createNewOrder(orderRequest, userId));
     }
 
+    @Transactional(readOnly = true)
     public OrderDetails getActiveUserOrder(Long userId) throws OrderExpiredException {
         Order order =
                 orderRepository.findPendingOrderByIdAndUserId(userId).orElseThrow(() -> new OrderExpiredException("Your booking window has " + "timed out. " + "Please start a new order."));
@@ -76,7 +79,7 @@ public class OrderService {
                 .filter(t -> t.getEventLocationsId().equals(orderRequest.getEventLocationId())
                         && t.getEventStartTime().equals(orderRequest.getEventStartTime()))
                 .limit(orderRequest.getTicketsCount())
-                .collect(Collectors.toList());
+                .toList();
 
         for (Ticket ticket : ticketsToRelease) {
             ticket.setStatus(TicketStatus.AVAILABLE);
@@ -314,6 +317,18 @@ public class OrderService {
                 orderRepository.findPendingOrderByIdAndUserId(userId).orElseThrow(() -> new NoActiveOrderException(userId));
 
         validateOrderDetails(order);
+        if (finishOrderRequest.getPromoCode() != null) {
+            promoCodeService.validatePromoCode(finishOrderRequest.getPromoCode(), userId);
+            promoCodeService.validateAmount(order.getTotalPrice(),
+                    finishOrderRequest.getPromoCode());
+
+            BigDecimal bigDecimal =
+                    promoCodeService.applyPromoCode(order.getTotalPrice(),
+                            finishOrderRequest.getPromoCode());
+
+            order.setTotalPrice(bigDecimal);
+        }
+
         PaymentRequest paymentRequest =
                 paymentMapper.toPaymentRequest(finishOrderRequest, order,
                         userEmail);
@@ -323,6 +338,7 @@ public class OrderService {
         PaymentResponse paymentResponse = response.getBody();
         if (paymentResponse.isSuccess()) {
             handleSuccessfulPayment(order, paymentResponse);
+            promoCodeService.updatePromoCode(finishOrderRequest.getPromoCode());
         } else {
             handleFailedPayment(paymentResponse);
         }
